# domain-model-by-prd

./: README.md
ansible/: config.yaml
services/api/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
services/api/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
services/api/.devcontainer/postgres/: .gitignore
services/api/.devcontainer/postgres/init/: 01_init.sql  02_data.sql
services/api/app/: ai.py  api.py  config.py  domain_model.py  prd.py  settings.py
services/api/kamal/: .env_template
services/api/kamal/config/: deploy.yml
services/editor/: .dockerignore  nginx.conf  package-lock.json  package.json  webpack.config.js
services/editor/.devcontainer/: devcontainer.json
services/editor/kamal/: .env_template  .gitignore
services/editor/kamal/config/: deploy.yml
services/editor/src/: GraphGenerator.ts  main.ts
